--- a/app/app.html
+++ b/app/app.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>vue-ele-admin</title>
+    <title>vue-admin-ui</title>
 </head>
 <body>
-    <div id="app">
-
-    </div>
+    <div id="app"></div>
 </body>
 </html>
