--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel=icon href=img/favicon.ico>
-    <title>可视化工具</title>
+    <title>my project</title>
   </head>
   <body>
     <noscript>
