--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel=icon href=img/favicon.ico>
     <title>my project</title>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <noscript>
       <strong>We're sorry this page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
